src-ken&y/objects/Notification_Contacts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the default notification email address information. (Ex: Default address for which the notification email to be sent when a batch process completes.)</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>The type of action on the object that the notification contact is responsible for. (Ex: Batch Execution)</description>
        <inlineHelpText>The type of action on the object that the notification contact is responsible for. (Ex: Batch Execution)</inlineHelpText>
        <label>Action</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address of the notification contact to be used for sending the notification email.</description>
        <inlineHelpText>Email address of the notification contact to be used for sending the notification email.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>The type of object that the contact is associated with. (Ex: Memorized Transaction)</description>
        <inlineHelpText>The type of object that the contact is associated with. (Ex: Memorized Transaction)</inlineHelpText>
        <label>Object Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Notification Contacts</label>
</CustomObject>